feat(api): Update api auth

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -1,7 +1,8 @@
 ENVIRONMENT=dev
 SECRET_KEY=hmtoan@dev
-DATABASE_URL=postgresql://postgres:db-postgres@db.mcyfcwxvhbijgvslmywf.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.mcyfcwxvhbijgvslmywf:db-postgres@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
 ADMIN_EMAIL=huynhtoan30@gmail.com
 APP_NAME=FastAPI Next.js App
 DEBUG=True
 API_KEY=your_api_key_here
+ACCESS_TOKEN_EXPIRE_MINUTES=30
