--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,23 @@
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==3.2.2
+cffi==1.17.1
 click==8.2.1
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.13
 greenlet==3.2.3
 h11==0.16.0
 idna==3.10
+passlib==1.7.4
+psycopg2==2.9.10
+pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
+PyJWT==2.10.1
 python-dotenv==1.1.0
+python-multipart==0.0.20
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sqlmodel==0.0.24
