feat(auth) : auth flow with token

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -6,3 +6,4 @@ APP_NAME=FastAPI Next.js App
 DEBUG=True
 API_KEY=your_api_key_here
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_SECRET_KEY='token@refresh'
