--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -12,3 +12,5 @@ REDIS_PORT=6379
 GOOGLE_CLIENT_ID=819519889622-r1cv8a0c0lfp16f6cmh0h0hvkjs5vqp2.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=https://miniature-carnival-p5w4979j4hrqwg-8000.app.github.dev/api/v1/auth/google/callback
+FRONTEND_URL=https://miniature-carnival-p5w4979j4hrqwg-3000.app.github.dev/
+GENMINI_API_KEY=AIzaSyDagoTDjO-WUQbRVa2frnnjB0Kq2sGIVLQ
